# MyTapo

./: .env  .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backfill  Dockerfile.consumption_reporter  Dockerfile.dryer  Dockerfile.event_detector  Dockerfile.influx_consumption  Dockerfile.report_api  Dockerfile.solar  Dockerfile.washing  EVENT_DETECTION.md  GRAFANA_OFFICE_QUERY.md  README.md  analytics_generator.py  awtrix_client.py  awtrix_energy_monitor.py  backfill_events.py  cltv_import_settings.json  consumption_reporter.py  diagnose_protocol.py  docker-compose.local.yml  docker-compose.synology.yml  docker-compose.yml  event_detector.py  influx_batch_writer.py  influx_queries.py  manage_devices.py  pyproject.toml  report_api.py  requirements.txt  retry_manager.py  solar_energy_generated.py  solarbank_schedule_optimizer.py  tapo_connection_pool.py  tapo_influx_consumption.py  tapo_influx_consumption_dynamic.py  tapo_influx_test.py  (+9 more)
.github/workflows/: docker-build.yml
config/: appliance_profiles.json  devices.json
doc/: api_endpoints.md  system_documentation.md
doc/diagrams/: 1_gesamtarchitektur.excalidraw  2_datenfluss.excalidraw  3_event_detection.excalidraw  4_n8n_workflows.excalidraw  5_benachrichtigungen.excalidraw
doc/tasks/: context_session_01.md  context_session_02.md
grafana/dashboards/: appliance_events.json  energy_overview.json
n8n_workflows/: 1_energy_report_on_demand.json  2_ai_energy_analysis.json  3_weekly_ai_summary.json
